crates/reinhardt-pages/tests/ui/wasm_server_api/fail/attribute_mismatch.stderr
error: `#[wasm]` and `#[server]` variants for `target_name` must have matching non-target attributes
  --> tests/ui/wasm_server_api/fail/attribute_mismatch.rs:14:9
   |
14 |     pub fn target_name() -> &'static str {
   |            ^^^^^^^^^^^
